First Fix - TV Episode Spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ h2 {
     z-index: 5;
     top: 232.25px;
 }
-@media only screen and (max-height:800px) {
+@media only screen and (max-width:1000px) {
     .left {
         display: none;
     }
@@ -193,7 +193,7 @@ h2 {
     margin-right: 0;
     bottom: 245.25px;
 }
-@media only screen and (max-height:800px) {
+@media only screen and (max-width:1000px) {
     .right {
         display: none;
     }
